<resources>
    <string name="app_name">Notesalud</string>
    <string name="login">Ingresar</string>
    <string name="demo">Demo</string>
    <string name="support">Soporte</string>
    <string name="support_faq">Preguntas Frecuentes</string>
    <string name="support_video">Videos</string>
    <string name="support_chat">Comunicación</string>
    <string name="device">Dispositivo</string>
    <string name="status">Actualizaciones</string>
    <string name="settings">Configuración</string>
    <string name="exit">Salir</string>
    <string name="copyright_app">NotesaludR © AmediDevelopment 2016</string>
    <string name="pref_server_ip">server_ip</string>
    <string name="pref_server_port">server_port</string>
    <string name="pref_server_port_aux">server_port_aux</string>
    <string name="pref_notify_sound">notify_sound</string>
    <string name="pref_server_ip_default">181.49.36.162</string>
    <string name="pref_server_port_default">8080</string>
    <string name="pref_server_port_aux_default">8081</string>
    <string name="pref_server_port_aux_tittle" />
    <string name="pref_server_port_tittle">tittle</string>
    <string name="pref_server_port_summary">summary</string>
    <string name="pref_server_ip_tittle">tittle</string>
    <string name="pref_server_category">cat</string>
    <string name="pref_server_screen_tittle">sa</string>
    <string name="pref_server_screen_summary">sa</string>
    <string name="pref_server_key">key</string>
    <string name="pref_update">update</string>
    <string name="pref_update_key">key</string>
    <string name="pref_update_tittle">tittle</string>
    <string name="pref_screen">scren</string>
    <string name="pref_screen_tittle">s</string>
    <string name="pref_update_summary">summary</string>
    <string name="pref_update_action_view">plyastore</string>
    <string name="pref_notify_key">key</string>
    <string name="pref_notify_summary">summary</string>
    <string name="pref_notify_title">title</string>
    <string name="pref_notify_category_title">title</string>
    <string name="pref_notify_sound_key">keysound</string>
    <string name="pref_notify_sound_summary">summary</string>
    <string name="pref_notify_sound_title">tittle</string>
    <string name="pref_notify_msg_key">msg</string>
    <string name="pref_notify_msg_summary">msg</string>
    <string name="pref_notify_msg_title">msg</string>
    <string name="pref_notify_msg_type" />
    <string name="pref_notify_msg_type_key">key</string>
    <string name="pref_notify_msg_type_tittle">s</string>
    <string name="pref_notify_msg_type_summary" />
    <string name="pref_notify_sound_category_tittle">title</string>
    <string name="pref_notify_ringtone_value">value</string>
    <string name="pref_notify_ringtone_title">t</string>
    <string name="pref_notify_ringtone_key">k</string>
    <string name="pref_help_category_title">tile</string>
    <string name="pref_help_release_key">key</string>
    <string name="pref_help_release_summary">summary</string>
    <string name="pref_help_group_details_title">s</string>
    <string name="pref_help_group_details_summary">sa</string>
    <string name="pref_help_group_action_view">a</string>
    <string name="pref_help_group_title">s</string>
    <string name="pref_help_group_summary">s</string>
    <string name="pref_help_title">s</string>
    <string name="pref_help_summary">sum</string>
    <string name="title_settings">Configuración</string>
    <string name="tittle_dialog_login">Iniciar Sesión</string>
    <string name="createUser">Crear Usuario</string>
    <string name="restorePass">Recuperar Contraseña</string>
    <string name="listUser">Seleccionar Usuario</string>
    <string name="welcome">Bienvenido</string>
</resources>
